--- a/dashboard.html
+++ b/dashboard.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <title>Dashboard</title>
 </head>
@@ -12,8 +14,36 @@
     <div class="page-container">
         <div class="dashboard-container">
             
+            <div class="row">
+                <div class="col-3">
+                    <div class="left-column-container">
+                        <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
+                        <p class="company-name">Learny</p>
+                        <div id="side-nav-bar">
+                            <ul>
+                                <li class="nav-icon-01">Dashboard</li>
+                                <li class="nav-icon-02">Classes</li>
+                                <li class="nav-icon-03">Resources</li>
+                                <li class="nav-icon-04">Learning Plan</li>
+                                <li class="nav-icon-05">Chat</li>
+                                <li class="nav-icon-06">Settings</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    Middle
+                </div>
+
+                <div class="col-3">
+                    Right
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="dashboard.js" type="text/javascript"></script>
 </html>
