Remove unnecessary container

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,66 +16,65 @@
         <div class="dashboard-container">
             <div class="row">
 
+                <!-- LEFT COLUMN -->
                 <div class="col-12 col-lg-3">
-                    <div class="left-column-container">
-                        
-                        <div class="collapse" id="collapseContainer">
-                            <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
-                            <p class="company-name category-text-container">Learny</p>
-                            <div id="side-nav-bar">
-                                <ul>
-                                    <li>
-                                        <img src="images/navbar_icons/01-dashboard-icon.png">
-                                        <div class="category-text-container">
-                                            Dashboard
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/navbar_icons/02-issues-icon.png">
-                                        <div class="category-text-container">
-                                            Classes
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/navbar_icons/03-resources-icon.png">
-                                        <div class="category-text-container">
-                                            Resources
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/navbar_icons/04-learning-planning-icon.png">
-                                        <div class="category-text-container">
-                                            Learning Plan
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/navbar_icons/05-chat-icon.png">
-                                        <div class="category-text-container">
-                                            Chat
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/navbar_icons/06-settings-icon.png">
-                                        <div class="category-text-container">
-                                            Settings
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+                    <div class=" left-column-container collapse" id="collapseContainer">
+                        <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
+                        <p class="company-name category-text-container">Learny</p>
+                        <div id="side-nav-bar">
+                            <ul>
+                                <li>
+                                    <img src="images/navbar_icons/01-dashboard-icon.png">
+                                    <div class="category-text-container">
+                                        Dashboard
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="images/navbar_icons/02-issues-icon.png">
+                                    <div class="category-text-container">
+                                        Classes
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="images/navbar_icons/03-resources-icon.png">
+                                    <div class="category-text-container">
+                                        Resources
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="images/navbar_icons/04-learning-planning-icon.png">
+                                    <div class="category-text-container">
+                                        Learning Plan
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="images/navbar_icons/05-chat-icon.png">
+                                    <div class="category-text-container">
+                                        Chat
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="images/navbar_icons/06-settings-icon.png">
+                                    <div class="category-text-container">
+                                        Settings
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
+                    </div>
                         <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-hide">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseContainer" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                        </nav>
-                            
+                        </nav>    
                     </div>
-                </div>
 
+                <!-- MIDDLE COLUMN -->
                 <div class="col-6 col-lg-6">
                     Middle
                 </div>
 
+                <!-- RIGHT COLUMN -->
                 <div class="col-6 col-lg-3">
                     Right
                 </div>
