Minor front-end fixes, and removed unnecessary code

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
                 <div class="col-12 col-lg-3">
                     <div class=" left-column-container collapse" id="collapseContainer">
                         <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
-                        <p class="company-name category-text-container">Learny</p>
+                        <p class="text-display company-font category-text-container">Learny</p>
                         <div id="side-nav-bar">
                             <ul>
                                 <li>
@@ -66,17 +66,18 @@
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseContainer" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
+                            <a class="navbar-brand company-font company-font-padding" href="#">Learny</a>>
                         </nav>    
                     </div>
 
                 <!-- MIDDLE COLUMN -->
                 <div class="col-6 col-lg-6">
-                    Middle
+
                 </div>
 
                 <!-- RIGHT COLUMN -->
                 <div class="col-6 col-lg-3">
-                    Right
+
                 </div>
                 
             </div>
