Added header of middle column

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesLeft.css">
+    <link rel="stylesheet" href="stylesMiddle.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
     <title>Dashboard</title>
@@ -18,7 +19,7 @@
 
                 <!-- LEFT COLUMN -->
                 <div class="col-12 col-lg-3">
-                    <div class=" left-column-container collapse" id="collapseContainer">
+                    <div class="left-column-container collapse" id="collapseContainer">
                         <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
                         <p class="text-display company-font category-text-container">Learny</p>
                         <div id="side-nav-bar">
@@ -71,12 +72,20 @@
                     </div>
 
                 <!-- MIDDLE COLUMN -->
-                <div class="col-6 col-lg-6">
-
+                <div class="col-12 col-lg-6">
+                    <div class="middle-column-container">
+                        <div class="header-container">
+                            <span class="dashboard-font">Dasbboard</span>
+                            <span class="date-font">22 April 2020, Tuesday</span>
+                            <span class="search-container">
+                                <img src="images/search_icon.png">
+                            </span>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-6 col-lg-3">
+                <div class="col-12 col-lg-3">
 
                 </div>
                 
