Added Welcome Back container in middle column

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesLeft.css">
     <link rel="stylesheet" href="stylesMiddle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-
     <title>Dashboard</title>
 </head>
 
@@ -74,6 +72,7 @@
                 <!-- MIDDLE COLUMN -->
                 <div class="col-12 col-lg-6">
                     <div class="middle-column-container">
+
                         <div class="header-container">
                             <span class="dashboard-font">Dasbboard</span>
                             <span class="date-font">22 April 2020, Tuesday</span>
@@ -81,6 +80,23 @@
                                 <img src="images/search_icon.png">
                             </span>
                         </div>
+
+                        <table class="welcome-back-container">
+                            <tr>
+                                <td class="last-login-container">
+                                    <p id="welcomeBack" class="welcome-back-font"></p>
+                                    <p id="lastClassUnit" class="last-class-font"></p>
+                                    <div class="progress-bar-container">
+                                        <div id="lastClassProgressBar"></div>
+                                    </div>
+                                    <p id="progressPercentage" class="percentage-font">60%</p>
+                                </td>
+                                <td class="hero-container">
+                                    <img src="images/hero.png">
+                                </td>
+                            </tr>
+                        </table>
+
                     </div>
                 </div>
 
