Added classes list

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,16 +86,34 @@
                                 <td class="last-login-container">
                                     <p id="welcomeBack" class="welcome-back-font"></p>
                                     <p id="lastClassUnit" class="last-class-font"></p>
-                                    <div class="progress-bar-container">
-                                        <div id="lastClassProgressBar"></div>
+                                    <div class="progress-bar-container last-class-progress-bar">
+                                        <div id="lastClassProgressBar" class="progress-bar-fill"></div>
                                     </div>
                                     <p id="progressPercentage" class="percentage-font">60%</p>
                                 </td>
+                                
                                 <td class="hero-container">
                                     <img src="images/hero.png">
                                 </td>
                             </tr>
                         </table>
+
+                        <div class="middle-bottom-half-container row">
+
+                            <div class="col-12 col-sm-6 classes-info-container">
+                                <span class="info-title-font">Classes</span>
+                                <span class="more-classes-container" style="float: right;">
+                                    <a href="#" class="more-classes-font">More ></a>
+                                </span>
+
+                                <div id="classList" class="class-list-container"></div>
+                            </div>
+
+                            <div class="col-12 col-sm-6 hours-info-container">
+                                <div class="info-title-font">Hours spent on learning past week</div>
+                            </div>
+
+                        </div>
 
                     </div>
                 </div>
