--- a/dashboard.html
+++ b/dashboard.html
@@ -89,7 +89,7 @@
                                     <div class="progress-bar-container last-class-progress-bar">
                                         <div id="lastClassProgressBar" class="progress-bar-fill"></div>
                                     </div>
-                                    <p id="progressPercentage" class="percentage-font">60%</p>
+                                    <p id="progressPercentage" class="percentage-font"></p>
                                 </td>
                                 
                                 <td class="hero-container">
@@ -110,7 +110,12 @@
                             </div>
 
                             <div class="col-12 col-sm-6 hours-info-container">
-                                <div class="info-title-font">Hours spent on learning past week</div>
+                                <div class="info-title-font">
+                                    Hours spent on learning past week
+                                </div>
+                                <div class="chart-container">
+                                    <canvas id="myChart"></canvas>
+                                </div>
                             </div>
 
                         </div>
@@ -129,6 +134,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" ></script>
 <script src="dashboard.js" type="text/javascript"></script>
