Added logout header

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesLeft.css">
     <link rel="stylesheet" href="stylesMiddle.css">
+    <link rel="stylesheet" href="stylesRight.css">
     <title>Dashboard</title>
 </head>
 
@@ -125,7 +126,14 @@
 
                 <!-- RIGHT COLUMN -->
                 <div class="col-12 col-lg-3">
-
+                    <div class="right-column-container">
+                        <div class="header-container">
+                            <span class="logout-font">Logout</span>
+                            <span class="logout-logo">
+                                <img src="images/logout_icon.png">
+                            </span>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
