--- a/dashboard.html
+++ b/dashboard.html
@@ -127,12 +127,20 @@
                 <!-- RIGHT COLUMN -->
                 <div class="col-12 col-lg-3">
                     <div class="right-column-container">
-                        <div class="header-container">
+
+                        <div class="header-container logout-container">
                             <span class="logout-font">Logout</span>
                             <span class="logout-logo">
                                 <img src="images/logout_icon.png">
                             </span>
                         </div>
+
+                        <div class="profile-container">
+                            <img src="images/profile_picture_icon.png">
+                            <p id="profileName" class="profile-name-font"></p>
+                            <p id="profileTitle" class="profile-title-font"></p>
+                        </div>
+
                     </div>
                 </div>
                 
