Added topic completion progress at right column

--- a/dashboard.html
+++ b/dashboard.html
@@ -141,6 +141,8 @@
                             <p id="profileTitle" class="profile-title-font"></p>
                         </div>
 
+                        <div id="topicList" class="topics-completion-container"></div>
+
                     </div>
                 </div>
                 
