--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesLeft.css">
-    <link rel="stylesheet" href="stylesMiddle.css">
-    <link rel="stylesheet" href="stylesRight.css">
+    <link rel="stylesheet" href="styles/stylesLeft.css">
+    <link rel="stylesheet" href="styles/stylesMiddle.css">
+    <link rel="stylesheet" href="styles/stylesRight.css">
     <title>Dashboard</title>
 </head>
 
@@ -155,5 +155,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" ></script>
-<script src="dashboard.js" type="text/javascript"></script>
+<script src="scripts/dashboard.js" type="text/javascript"></script>
 </html>
