--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
             <div class="row no-gutters">
 
                 <!-- LEFT COLUMN -->
-                <div class="col-12 col-lg-3 left-column-outer">
+                <div class="col-12 col-xl-3 left-column-outer">
                     <div id="leftColumn" class="left-column-container">
 
                         <div class="close-button-container">
@@ -106,7 +106,7 @@
                 </div>
 
                 <!-- MIDDLE COLUMN -->
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6">
                     <div class="middle-column-container">
 
                         <div class="header-container">
@@ -160,7 +160,7 @@
                 </div>
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-xl-3">
                     <div class="right-column-container">
 
                         <div class="header-container logout-container">
