Made right column a popup sidebar

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="row no-gutters">
+            <div class="row no-gutters" style="height: 100%;">
 
                 <!-- LEFT COLUMN -->
                 <div class="col-12 col-xl-3 left-column-outer">
@@ -109,7 +109,7 @@
                 </div>
 
                 <!-- MIDDLE COLUMN -->
-                <div class="col-12 col-xl-6">
+                <div class="col-12 col-xl-6 middle-column-outer">
                     <div class="middle-column-container">
 
                         <div class="header-container">
@@ -163,8 +163,12 @@
                 </div>
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-xl-3 right-column-outer">
                     <div class="right-column-container">
+
+                        <div class="close-button-container">
+                            <a href="javascript:void(0)" class="close-button" onclick="closeRightColumnSidebar()">×</a>
+                        </div>
 
                         <div class="header-container logout-container">
                             <span class="logout-font">Logout</span>
