Added fade in animation for first page

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
     </div>
     <div class="wrapper">
         <nav>
-            <a href="#" class="county-logo"><label for="county-logo">county</label></a>
-            <div class="desktop">
+            <a href="#" class="county-logo animated fadeInLeft"><label for="county-logo">county</label></a>
+            <div class="desktop animated fadeInDown">
                 <a href="#Home">Home</a>
                 <a href="#About">About</a>
                 <a href="#Features">Features</a>
                 <a href="#Blog">Blog</a>
                 <a href="#Contact-us">Contact Us</a>
             </div>
-            <div class="mobile">
+            <div class="mobile animated fadeInDown">
                 <a href="#" id="open">&#9776</a>
             </div>
         </nav>
         <div class="landing">
-            <h2>Record your expenses</h2>
-            <h1>on-the-fly</h1>
-            <a href="#" class="btnLarge"><p>Download now</p></a>
-            <div class="appPreview">
+            <h2 class="animated fadeInLeft">Record your expenses</h2>
+            <h1 class="animated fadeInLeft">on-the-fly</h1>
+            <a href="#" class="btnLarge animated fadeInUp"><p>Download now</p></a>
+            <div class="appPreview animated fadeIn">
                 <img src="static/img/app_preview.png" alt="App Preview" class="maintainRatio">
             </div>
         </div>
