Updated UI for middle column

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/stylesNavbar.css">
     <link rel="stylesheet" href="styles/stylesLeft.css">
@@ -113,12 +113,18 @@
                 <div class="col-12 col-xl-6 middle-column-outer">
                     <div class="middle-column-container">
 
-                        <div class="header-container">
-                            <span class="dashboard-font">Dasbboard</span>
-                            <span class="date-font">22 April 2020, Tuesday</span>
-                            <span class="search-container">
-                                <img src="images/search_icon.png">
-                            </span>
+                        <div class="row header-container">
+                            <div class="col-4 align-self-center">
+                                <div class="dashboard-font">Dasbboard</div>
+                            </div>
+                            <div class="col-4 align-self-center center-align">
+                                <div class="date-font">22 April 2020, Tuesday</div>
+                            </div>
+                            <div class="col-4 align-self-center right-align">
+                                <div>
+                                    <img class="search-icon" src="images/search_icon.png">
+                                </div>
+                            </div>
                         </div>
 
                         <table class="welcome-back-container">
@@ -142,7 +148,7 @@
 
                             <div class="col-12 col-sm-6 classes-info-container">
                                 <span class="info-title-font">Classes</span>
-                                <span class="more-classes-container" style="float: right;">
+                                <span class="more-classes-container">
                                     <a href="#" class="more-classes-font">More ></a>
                                 </span>
 
