Changed icons from png to svg

--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/01-dashboard-icon.png">
+                                <img src="images/navbar_icons/01-dashboard-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Dashboard</a>
@@ -63,7 +63,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/02-issues-icon.png">
+                                <img src="images/navbar_icons/02-classes-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Classes</a>
@@ -72,7 +72,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/03-resources-icon.png">
+                                <img src="images/navbar_icons/03-resources-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Resources</a>
@@ -81,7 +81,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/04-learning-planning-icon.png">
+                                <img src="images/navbar_icons/04-learning-planning-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Learning Plan</a>
@@ -90,7 +90,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/05-chat-icon.png">
+                                <img src="images/navbar_icons/05-chat-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Chat</a>
@@ -99,7 +99,7 @@
 
                         <div class="row no-gutters category-container">
                             <div class="col-4 category-icon-container">
-                                <img src="images/navbar_icons/06-settings-icon.png">
+                                <img src="images/navbar_icons/06-settings-icon.svg">
                             </div>
                             <div class="category-text-container col-8">
                                 <a href="#">Settings</a>
