--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
             </div>
         </div>
     </div>
+    <div class="triangle-left"></div>
+    <div class="about-section">
+        <div class="wrapper">
+            <div class="about-info">
+                <img src="/static/img/pie-chart.svg" alt="pie-chart" class="about-img">
+                <div class="content">
+                    <h2>What is</h2>
+                    <h1>county?</h1>
+                    <p>Lorem ipsum dolor sit amet, consetetur 
+                        sadipscing elitr, sed diam nonumy eirmod 
+                        tempor invidunt ut labore et dolore magna 
+                        aliquyam erat, sed diam voluptua. At vero eos 
+                        et accusam et justo duo dolores et ea rebum. 
+                        Stet clita kasd gubergren, no sea takimata 
+                        sanctus est Lorem ipsum dolor sit amet. 
+                        Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
