Added aos.js library for animation on scroll

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <!-- External Libraries -->
     <link rel="stylesheet" href="/static/css/animate.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="static/css/main.css">
     <script type="text/javascript" src="static/js/nav.js"></script>
+    <script type="text/javascript" src="static'js/scroll.js"></script>
 </head>
 <body>
     <div id="overlay" class="close">
@@ -51,18 +53,20 @@
     <div class="about-section">
         <div class="wrapper">
             <div class="about-info">
-                <img src="/static/img/pie-chart.svg" alt="pie-chart" class="about-img">
-                <div class="content">
-                    <h2>What is</h2>
-                    <h1>county?</h1>
-                    <p>Lorem ipsum dolor sit amet, consetetur 
+                <img src="/static/img/pie-chart.svg" alt="pie-chart" class="about-img" data-aos="fade-right" data-aos-duration="1000" data-aos-once=true>
+                <div class="content" >
+                    <h2 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-once=true>What is</h2>
+                    <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800" data-aos-once=true>county?</h1>
+                    <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000" data-aos-once=true>
+                        Lorem ipsum dolor sit amet, consetetur 
                         sadipscing elitr, sed diam nonumy eirmod 
                         tempor invidunt ut labore et dolore magna 
                         aliquyam erat, sed diam voluptua. At vero eos 
                         et accusam et justo duo dolores et ea rebum. 
                         Stet clita kasd gubergren, no sea takimata 
                         sanctus est Lorem ipsum dolor sit amet. 
-                        Lorem ipsum dolor sit amet.</p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
                 </div>
             </div>
         </div>
@@ -70,5 +74,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
