Updated UI for right column

--- a/dashboard.html
+++ b/dashboard.html
@@ -177,7 +177,7 @@
                             <a href="javascript:void(0)" class="close-button" onclick="closeRightColumnSidebar()">×</a>
                         </div>
 
-                        <div class="header-container logout-container">
+                        <div class="logout-container">
                             <span class="logout-font">Logout</span>
                             <span class="logout-logo">
                                 <img src="images/logout_icon.png">
